# arena-casper

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  render.yaml  tsconfig.json  vercel.json
.superstack/: idea-context.md
agents/alpha/: index.ts
agents/beta/: index.ts
agents/shared/: agent-runner.ts  agent-state.ts  ai-client.ts  arena-client.ts  config.ts  env.ts  evidence-store.ts  hash.ts  mock-ledger.ts  portfolio.ts  price-feed.ts  risk-guard.ts  storage.ts  strategy.ts  types.ts
api/: match-coordinator.ts  server.ts
contracts/arena/: Cargo.toml  Odra.toml  wasm-opt  wasm-opt.cmd
contracts/arena/.cargo/: config.toml
contracts/arena/src/: lib.rs  odra_contract.rs
contracts/arena/wasm/: ArenaContractModule.wasm
public/: dashboard.html  index.html  wallet.js
scripts/: check-live-readiness.ts  live-create-match.ts  live-deploy-contract.ts  live-run-match.ts  live-settle-match.ts  live-start-match.ts  odra-build.sh  run-demo.ts  settle-match.ts  setup-testnet.sh
spectator/: server.ts
spectator/public/: dashboard.html  index.html
tools/: wasm-fallback.rs
