[package]
name = "arena-contract"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "arena_contract"
path = "src/lib.rs"

[dependencies]
odra = "2.8.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = "2.8.2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[build-dependencies]
odra-build = "2.8.2"

[dev-dependencies]
odra-test = "2.8.2"
serde_json = "1"

[[bin]]
name = "arena_contract_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "arena_contract_build_schema"
path = "bin/build_schema.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
